# Alpheus

./: .gitignore  CMakeLists.txt
include/: camera.h  entity.h  glad.h  input.h  light.h  loader.h  master_renderer.h  noise.h  rawmodel.h  renderer.h  shader.h  terrain.h  terrain_renderer.h  texture.h  textured_model.h  tools.h  window.h
res/shaders/: fragment.glsl  terrain_fragment.glsl  terrain_vertex.glsl  vertex.glsl
src/: glad.c  glad.h  loader.cpp  main.cpp  renderer.cpp  shader.cpp  window.cpp
src/entites/: camera.cpp
src/renderer/: loader.cpp  master_renderer.cpp  renderer.cpp  shader.cpp  terrain_renderer.cpp  window.cpp
src/terrain/: terrain.cpp
src/tools/: input.cpp  noise.cpp  texture.cpp  tools.cpp
